--- a/src_SU_Portefoelje/CMakeLists.txt
+++ b/src_SU_Portefoelje/CMakeLists.txt
@@ -5,4 +5,4 @@ project(src_SU_Portefoelje LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(src_SU_Portefoelje main.cpp)
+add_executable(src_SU_Portefoelje main.cpp hero.h enemy.h)
