Created more header files and functions for iteration 1

--- a/src_SU_Portefoelje/CMakeLists.txt
+++ b/src_SU_Portefoelje/CMakeLists.txt
@@ -5,4 +5,7 @@ project(src_SU_Portefoelje LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(src_SU_Portefoelje main.cpp hero.h enemy.h)
+find_package(Qt5Sql REQUIRED)
+
+add_executable(src_SU_Portefoelje main.cpp hero.h enemy.h DBFetch.h game.h)
+target_link_libraries(src_SU_Portefoelje  Qt5::Core Qt5::Sql)
