Included magic and a magic shop and made it possible to buy new magic

--- a/src_SU_Portefoelje/CMakeLists.txt
+++ b/src_SU_Portefoelje/CMakeLists.txt
@@ -7,5 +7,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Qt5Sql REQUIRED)
 
-add_executable(src_SU_Portefoelje main.cpp hero.h enemy.h DBFetch.h game.h cave.h)
+add_executable(src_SU_Portefoelje main.cpp hero.h enemy.h DBFetch.h game.h cave.h magic.h)
 target_link_libraries(src_SU_Portefoelje  Qt5::Core Qt5::Sql)
